<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_recycler_and_swipe_refresh"
            android:icon="@drawable/ic_arrow_back"
            android:title="@string/nav_back" />
    </group>

    <group android:id="@+id/group_about">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/nav_about" />
        <item
            android:id="@+id/nav_donate"
            android:icon="@drawable/ic_attach_money"
            android:title="@string/nav_donate" />
        <item
            android:id="@+id/nav_my_apps"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_my_apps" />
    </group>
</menu>