<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="5dp"
    android:elevation="2dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_card_about_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/about_contact"
            android:textColor="@color/blue_700"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/view_card_about_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blue_700" />

        <LinearLayout
            android:id="@+id/ll_card_about_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:src="@drawable/ic_email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/about_email"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_card_about_github"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:src="@drawable/ic_github" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/about_github"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_card_about_licenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:src="@drawable/ic_license" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/about_licenses"
                android:textStyle="italic" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>